force-app/main/default/objects/Opportunity/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <inlineHelpText>Enter the Competitor we lost to - if Other is chosen please indicate which</inlineHelpText>
    <label>Lost to Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TDC</fullName>
            </value>
            <value>
                <fullName>Telenor</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Andet/Ved ikke (beskriv i Other Competitor)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>