force-app/main/default/objects/Opportunity/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is used to create the resulting Subscriptions under an existing Contract. This is only used in Cross/Upsell and the value is copied to the Master Contract field on Quote</description>
    <inlineHelpText>Please choose which Contract you want the resulting Subscriptions to end up on.</inlineHelpText>
    <label>Master Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Master Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>