force-app/main/default/objects/Opportunity/fields/Need_Customer_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Need_Customer_Project_Manager__c</fullName>
    <description>Added for home office</description>
    <label>Need Customer Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>