force-app/main/default/objects/Opportunity/fields/Need_Help_for_Data_Collection__c.field-meta.xml
<CustomField>
    <fullName>Need_Help_for_Data_Collection__c</fullName>
    <description>Added for home office</description>
    <label>Need Help for Data Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>