force-app/main/default/objects/Opportunity/fields/NewBiz_CrossSale__c.field-meta.xml
<CustomField>
    <fullName>NewBiz_CrossSale__c</fullName>
    <formula>IF(TEXT( Type ) = &quot;New Business&quot;  ||  TEXT( Type )=&quot;Cross sell&quot;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewBiz_CrossSale</label>
    <type>Checkbox</type>
</CustomField>