force-app/main/default/objects/Opportunity/fields/Non_renewal_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Non_renewal_pipeline__c</fullName>
    <description>The pipeline value of the non-renewal part of this opportunity.</description>
    <formula>IF(IsClosed = FALSE,
    IF(ISPICKVAL(Type,&quot;Renewal&quot;), SBQQ__PrimaryQuote__r.Cross_and_upsale_amount__c, K12_Amount__c),
    0)
* Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The pipeline value of the non-renewal part of this opportunity.</inlineHelpText>
    <label>Non-renewal pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>