force-app/main/default/objects/Opportunity/fields/Number_of_Connections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Connections__c</fullName>
    <description>Added for Home Office</description>
    <label>Number of Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>