force-app/main/default/objects/Opportunity/fields/Opportunity_age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_age__c</fullName>
    <description>User story 45.</description>
    <formula>Today()- DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since creation.</inlineHelpText>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>