force-app/main/default/objects/Opportunity/fields/Opportunity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <inlineHelpText>Segment of the opportunity owner (not segment of the account the opportunity is related to).</inlineHelpText>
    <label>Opportunity Segment</label>
    <type>Text</type>
</CustomField>