force-app/main/default/objects/Opportunity/fields/Original_Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Original_Primary_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MK - CPQ-32 - 22092021 - Identifies the Initial Primary Quote before an Activation quote was created and became a Primary Quote.</description>
    <label>Original Primary Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Opportunities (Original Primary Quote)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>