force-app/main/default/objects/Opportunity/fields/Other_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Closed_Lost_Reason__c</fullName>
    <description>Included in service clip - requirement from Commercial Mngt</description>
    <inlineHelpText>Enter the closed lost reason if Other is chosen</inlineHelpText>
    <label>Other Closed Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>