force-app/main/default/objects/Opportunity/fields/Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor__c</fullName>
    <inlineHelpText>Enter the Competitor name if Other is picked in the Competitor list</inlineHelpText>
    <label>Other Competitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>