force-app/main/default/objects/Opportunity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <description>Shows open opportunities with a close date in the past</description>
    <formula>IF(CloseDate &lt;  TODAY() &amp;&amp;  IsClosed = FALSE,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows open opportunities with a close date in the past</inlineHelpText>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>