force-app/main/default/objects/Opportunity/fields/Partner_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Amount__c</fullName>
    <description>To hold the partner commission amount (Partner Management DKT-40840).</description>
    <inlineHelpText>Enter the partner commission amount</inlineHelpText>
    <label>Partner Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>