force-app/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Internal field used in process builder &apos; Renewal Opportunity&apos; to set special terms as reflected on previous quote on renewal quote</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>