force-app/main/default/objects/Opportunity/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>User Story ID: 69,71,73 used for pipeline reporting
Displays the weighted K12 amount if the opportunity is not closed. If it in not closed, the amount should count towards the pipeline.</description>
    <formula>IF( IsClosed = FALSE,  K12_Amount__c * Probability   ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>