force-app/main/default/objects/Opportunity/fields/POQ_Status__c.field-meta.xml
<CustomField>
    <fullName>POQ_Status__c</fullName>
    <label>POQ Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not ready</fullName>
                <default>true</default>
                <label>Not ready</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Done Updating LL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>