force-app/main/default/objects/Opportunity/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>User story ID: 70. A traffic light depicting Green, Yellow or Red to show how mature the opportunity is on the &quot;Process&quot; Checkpoint category</description>
    <formula>IMAGE( 
CASE(( Score_Buying_process_understood__c + Score_Shortlisting_confirmed__c + Score_Contract_signed__c ), 
32, &quot;/img/samples/light_green.gif&quot;, 
0, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_yellow.gif&quot;),&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How well are we doing on the Process?</inlineHelpText>
    <label>Process</label>
    <type>Text</type>
</CustomField>