force-app/main/default/objects/Opportunity/fields/Product_s_in_scope__c.field-meta.xml
<CustomField>
    <fullName>Product_s_in_scope__c</fullName>
    <description>User story ID: 94</description>
    <inlineHelpText>Specify here which products are included in this opportunity</inlineHelpText>
    <label>Product(s) in scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Product_Category</valueSetName>
    </valueSet>
</CustomField>