force-app/main/default/objects/Opportunity/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <description>Internal field used to calculate compensation per quarter</description>
    <formula>IF(MONTH(CloseDate) &lt;= 3 &amp;&amp; YEAR(CloseDate)=YEAR(TODAY()), 1,
IF(MONTH(CloseDate) &gt; 3 &amp;&amp; MONTH(CloseDate) &lt;= 6 &amp;&amp; YEAR(CloseDate)=YEAR(TODAY()), 2,
IF(MONTH(CloseDate) &gt; 6 &amp;&amp; MONTH(CloseDate) &lt;= 9 &amp;&amp; YEAR(CloseDate)=YEAR(TODAY()), 3,
IF(MONTH(CloseDate) &gt; 9 &amp;&amp; MONTH(CloseDate) &lt;= 12 &amp;&amp; YEAR(CloseDate)=YEAR(TODAY()), 4,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sets the number for the quarter in which the Opportunity is closed won - if Opportunity is closed in a quarter from a previous year the quarter will be 0</inlineHelpText>
    <label>Quarter for Opportunity Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>