force-app/main/default/objects/Opportunity/fields/Renewal_Upsale__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Upsale__c</fullName>
    <formula>IF(TEXT( Type ) = &quot;Upsale&quot;  ||  TEXT( Type )=&quot;Renewal&quot;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal_Upsale</label>
    <type>Checkbox</type>
</CustomField>