force-app/main/default/objects/Opportunity/fields/Requested_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Account_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Account Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Account Manager</label>
    <type>Checkbox</type>
</CustomField>