force-app/main/default/objects/Opportunity/fields/Requested_Bid_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Bid_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Bid Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Bid Manager</label>
    <type>Checkbox</type>
</CustomField>