force-app/main/default/objects/Opportunity/fields/Requested_Customer_Succes_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Customer_Succes_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Customer Succes Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Customer Succes Manager</label>
    <type>Checkbox</type>
</CustomField>