force-app/main/default/objects/Opportunity/fields/Requested_Int_Pricing_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Int_Pricing_Contract_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;International Pricing &amp; Contract Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Int Pricing &amp; Contract Manager</label>
    <type>Checkbox</type>
</CustomField>