force-app/main/default/objects/Opportunity/fields/Requested_Legal_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Legal_Advisor__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Legal Advisor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Legal Advisor</label>
    <type>Checkbox</type>
</CustomField>