force-app/main/default/objects/Opportunity/fields/Requested_Network_Solution_Manager_Mobil__c.field-meta.xml
<CustomField>
    <fullName>Requested_Network_Solution_Manager_Mobil__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Network Solution Manager Mobile&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Network Solution Manager Mobil</label>
    <type>Checkbox</type>
</CustomField>