force-app/main/default/objects/Opportunity/fields/Requested_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Project_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Project Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Project Manager</label>
    <type>Checkbox</type>
</CustomField>