force-app/main/default/objects/Opportunity/fields/Requested_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_Role__c</fullName>
    <description>Used in Opportunity Guidance flow to point out the roles needed for an opportunity. Roles is created as public groups, and users in each group are notofied when a specialist is needed.</description>
    <label>Requested Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Bid Manager</fullName>
            </value>
            <value>
                <fullName>Customer Succes Manager</fullName>
            </value>
            <value>
                <fullName>International Pricing &amp; Contract Manager</fullName>
            </value>
            <value>
                <fullName>Legal Advisor</fullName>
            </value>
            <value>
                <fullName>Network Solution Manager</fullName>
                <isActive>false</isActive>
                <label>Network Solution Manager</label>
            </value>
            <value>
                <fullName>Network Solution Manager Mobile</fullName>
            </value>
            <value>
                <fullName>Network Solution Manager WAN</fullName>
                <isActive>false</isActive>
                <label>Network Solution Manager WAN</label>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Sales Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Sales Specialist 1</fullName>
                <isActive>false</isActive>
                <label>Sales Specialist 1</label>
            </value>
            <value>
                <fullName>Sales Specialist 2</fullName>
                <isActive>false</isActive>
                <label>Sales Specialist 2</label>
            </value>
            <value>
                <fullName>Sales Specialist MA/LA</fullName>
                <isActive>false</isActive>
                <label>Sales Specialist MA/LA</label>
            </value>
            <value>
                <fullName>Sales Specialist UC/Fixed – KA</fullName>
            </value>
            <value>
                <fullName>Sales Specialist UC/Fixed MA/LA</fullName>
            </value>
            <value>
                <fullName>Sales Specialist WAN</fullName>
            </value>
            <value>
                <fullName>Sales Specialist WAN – KA</fullName>
                <isActive>false</isActive>
                <label>Sales Specialist WAN – KA</label>
            </value>
            <value>
                <fullName>Service AccountManager</fullName>
                <isActive>false</isActive>
                <label>Service AccountManager</label>
            </value>
            <value>
                <fullName>Service Account Manager</fullName>
            </value>
            <value>
                <fullName>Solution Manager</fullName>
                <isActive>false</isActive>
                <label>Solution Manager</label>
            </value>
            <value>
                <fullName>Solution Manager UC/CCaS</fullName>
                <isActive>false</isActive>
                <label>Solution Manager UC/CCaS</label>
            </value>
            <value>
                <fullName>Solution Specialist UC/CCaS</fullName>
            </value>
            <value>
                <fullName>VIP Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>