force-app/main/default/objects/Opportunity/fields/Requested_Sales_Assistant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Sales_Assistant_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Sales Assistant Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Sales Assistant Manager</label>
    <type>Checkbox</type>
</CustomField>