force-app/main/default/objects/Opportunity/fields/Requested_Sales_Specialist_MA_LA__c.field-meta.xml
<CustomField>
    <fullName>Requested_Sales_Specialist_MA_LA__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Sales Specialist MA/LA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Sales Specialist MA/LA</label>
    <type>Checkbox</type>
</CustomField>