force-app/main/default/objects/Opportunity/fields/Requested_Sales_Specialist_WAN_KA__c.field-meta.xml
<CustomField>
    <fullName>Requested_Sales_Specialist_WAN_KA__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Sales Specialist WAN – KA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Sales Specialist WAN – KA</label>
    <type>Checkbox</type>
</CustomField>