force-app/main/default/objects/Opportunity/fields/Requested_Service_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requested_Service_Account_Manager__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Service Account Manager&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Service Account Manager</label>
    <type>Checkbox</type>
</CustomField>