force-app/main/default/objects/Opportunity/fields/Requested_Solution_Manager_UC_CCaS__c.field-meta.xml
<CustomField>
    <fullName>Requested_Solution_Manager_UC_CCaS__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;Solution Manager UC/CCaS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Solution Manager UC/CCaS</label>
    <type>Checkbox</type>
</CustomField>