force-app/main/default/objects/Opportunity/fields/Requested_VIP_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Requested_VIP_Advisor__c</fullName>
    <formula>INCLUDES(Requested_Role__c, &apos;VIP Advisor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested VIP Advisor</label>
    <type>Checkbox</type>
</CustomField>