force-app/main/default/objects/Opportunity/fields/Revenue_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Forecast_Date__c</fullName>
    <description>Technical Field used to determine the start date for Revenue Forecasts.</description>
    <formula>IF(ISBLANK( SBQQ__PrimaryQuote__c ),  CloseDate ,   SBQQ__PrimaryQuote__r.SBQQ__StartDate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Forecast Date</label>
    <type>Date</type>
</CustomField>