force-app/main/default/objects/Opportunity/fields/Risks_mitigated__c.field-meta.xml
<CustomField>
    <fullName>Risks_mitigated__c</fullName>
    <description>User Story ID: 70
Used for Opportunity scoring. This question is part of the Proposal stage</description>
    <inlineHelpText>Have we helped the decision makers resolve the perceived risks of proceeding with us?</inlineHelpText>
    <label>Risks mitigated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Opportunity_Scoring_options</valueSetName>
    </valueSet>
</CustomField>