force-app/main/default/objects/Opportunity/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>User story ID: 69,71,73 Used for pipeline reporting</description>
    <formula>IF( IsWon ,  K12_Amount__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>