force-app/main/default/objects/Opportunity/fields/Sales_Engineer_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the target is for Sales Engineer, so we can exclude it from the total Sales Target. The Sales target for Sales Engineers is a subset for the total sales target for Enterprise and needs to be excluded in Performance reports.</description>
    <inlineHelpText>Check this box if the target is for Sales Engineer, so we can exclude it from the total Sales Target. The Sales target for Sales Engineers is a subset for the total sales target for Enterprise and needs to be excluded in Performance reports.</inlineHelpText>
    <label>Sales Engineer Target</label>
    <type>Checkbox</type>
</CustomField>