force-app/main/default/objects/Opportunity/fields/SalesSpecialistNOTneeded__c.field-meta.xml
<CustomField>
    <fullName>SalesSpecialistNOTneeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Specialist NOT needed</label>
    <type>Checkbox</type>
</CustomField>