force-app/main/default/objects/Opportunity/fields/Score_Awaiting_CXO_acceptance__c.field-meta.xml
<CustomField>
    <fullName>Score_Awaiting_CXO_acceptance__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Awaiting_CXO_approval__c  , &quot;Yes&quot;, 10, &quot;Working on it&quot;, 5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Awaiting CXO acceptance?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>