force-app/main/default/objects/Opportunity/fields/Score_Buying_process_understood__c.field-meta.xml
<CustomField>
    <fullName>Score_Buying_process_understood__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Buying_process_understood__c, &quot;Yes&quot;, 2, &quot;Working on it&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Buying process understood?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>