force-app/main/default/objects/Opportunity/fields/Score_Competitors_identified__c.field-meta.xml
<CustomField>
    <fullName>Score_Competitors_identified__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Competitors_identified__c  , &quot;Yes&quot;, 10, &quot;Working on it&quot;, 5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Competitors identified?</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>