force-app/main/default/objects/Opportunity/fields/Score_Contract_signed__c.field-meta.xml
<CustomField>
    <fullName>Score_Contract_signed__c</fullName>
    <description>User Story ID: 70
Used to calculate the score of the opportunity and set probability %</description>
    <formula>CASE( Contract_signed__c  , &quot;Yes&quot;, 20, &quot;Working on it&quot;, 10,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score - Contract signed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>